# domain-model-to-code

./: .gitignore
hotel-reservation-system/: .gitignore  README.md  pyproject.toml
hotel-reservation-system/docs/: domain-model.md  md_server.py  process-log.md  requirements.md
hotel-reservation-system/docs/decisions/: 001-use-mermaid-for-domain-model.md  002-hotel-reservation-as-domain.md  003-fastapi-over-django.md  004-rdb-sqlite-sqlalchemy.md  005-onion-architecture.md  006-code-quality-tooling.md  007-admin-via-api.md  008-held-reservation-pattern.md  009-payment-mock.md  010-pytest-for-testing.md  011-test-naming-convention.md
hotel-reservation-system/docs/domain-events/: DE-01_reservation-held.md  DE-02_reservation-expired.md  DE-03_reservation-confirmed.md  DE-04_reservation-modified.md  DE-05_reservation-cancelled.md  DE-06_guest-checked-in.md  DE-07_guest-checked-out.md  DE-08_no-show-detected.md  DE-09_payment-completed.md  DE-10_payment-failed.md  DE-11_room-status-changed.md
hotel-reservation-system/src/: main.py
hotel-reservation-system/src/application/event_handlers/: no_show_detected_notification_handler.py  payment_completed_handler.py  payment_failed_handler.py  payment_failed_notification_handler.py  reservation_cancelled_notification_handler.py  reservation_cancelled_refund_handler.py  (+3 more)
hotel-reservation-system/src/infrastructure/: event_publisher.py
hotel-reservation-system/tests/application/: test_create_reservation.py  test_event_handlers.py
hotel-reservation-system/tests/infrastructure/: test_dispatching_event_publisher.py
(+55 files in other folders)
